frame for new homepage is done

--- a/masonCS.html
+++ b/masonCS.html
@@ -580,7 +580,7 @@ if (window.location.origin + window.location.pathname === "https://bookit.dmc.jh
 #redesign-container a {
     text-decoration: none;
     color: #000;
-    cursor: pointer;
+    cursor:grab;
 }
 
 /* Main container styles */
@@ -1074,14 +1074,6 @@ footer {
     }
 }
 </style>
-
-
-
-
-
-
-
-
 
 <!-- INFO BARS -->
 <script>
