added all category pages

--- a/newHomepage/banner.html
+++ b/newHomepage/banner.html
@@ -112,6 +112,115 @@ a {
   text-transform: none;
 }
 
+@media (max-width: 768px) {
+    .main-cont {
+        width: 768px;
+    }
+    .menu-bar {
+        display: flex;
+        direction: row;
+        justify-content: space-between;
+        font-size: 14px;
+        padding: 20px;
+        width: 90%;
+    }
+    .menu-bar .links {
+        display: flex;
+        justify-content: row;
+        align-items: center;
+        font-size: larger;
+        gap: 20px;
+    }
+    .hero-text {
+        font-size: x-large;
+    }
+    .spacer {
+        height: 20px;
+    }
+}
+
+@media (max-width: 465px) {
+    .main-cont {
+        width: 465px;
+    }
+    .menu-bar {
+        display: flex;
+        direction: row;
+        justify-content: space-between;
+        font-size: 12px;
+        padding: 15px;
+        width: 90%;
+    }
+    .hero-text {
+        font-size: x-large;
+    }
+    .menu-bar .links {
+        display: flex;
+        justify-content: row;
+        align-items: center;
+        font-size: small;
+        gap: 15px;
+    }
+    .spacer {
+        height: 0px;
+    }
+}
+
+@media (max-width: 350px) {
+    .main-cont {
+        width: 350px;
+    }
+    .menu-bar {
+        display: flex;
+        direction: row;
+        justify-content: space-between;
+        font-size: 10px;
+        padding: 10px;
+        width: 90%;
+    }
+    .hero-text {
+        font-size: large;
+    }
+    .menu-bar .links {
+        display: flex;
+        justify-content: row;
+        align-items: center;
+        font-size: small;
+        gap: 10px;
+    }
+    .spacer {
+        height: 0px;
+    }
+}
+
+@media (max-width: 275px){
+    .main-cont {
+        width: 275px;
+    }
+    .menu-bar {
+        display: flex;
+        direction: row;
+        justify-content: space-between;
+        font-size: 10px;
+        padding: 5px;
+        width: 90%;
+    }
+    .hero-text {
+        font-size: large;
+    }
+    .menu-bar .links {
+        display: flex;
+        justify-content: row;
+        align-items: center;
+        font-size: x-small;
+        gap: 5px;
+    }
+
+    .spacer {
+        height: 0px;
+    }
+}
+
 </style>
 <div>
     <div class="slideshow-container">
@@ -125,14 +234,14 @@ a {
                     <div class="main-cont">
                         <div class="banner">
                             <div class="two-main-butts-cont">
-                                <a href="https://bookit.dmc.jhu.edu/reserve/Projectors">
+                                <a href="https://bookit.dmc.jhu.edu/reserve/equipment/dmc">
                                     <div class="two-main-butts" style="background-color: #4d6ca9;">
                                         <img src="https://libapps.s3.amazonaws.com/customers/9396/images/equip_butt.png" />
                                         <span>Equipment</span>
                                     </div>
                                 </a>
 
-                                <a href="https://bookit.dmc.jhu.edu/reserve/InLabComputers">
+                                <a href="https://bookit.dmc.jhu.edu/reserve/spaces/dmc">
                                     <div class="two-main-butts" style="background-color: #4d6ca9;">
                                         <img src="https://libapps.s3.amazonaws.com/customers/9396/images/inlab_butt.png" />
                                         <span>In-Lab Resources</span>
@@ -162,7 +271,7 @@ a {
                                     </div>
                                 </a>
 
-                                <a href="https://bookit.dmc.jhu.edu/reserve/InLabComputers">
+                                <a href="https://bookit.dmc.jhu.edu/spaces?lid=16257&gid=0&c=0">
                                     <div class="two-main-butts" style="background-color: #4d6ca9;">
                                         <img src="https://libapps.s3.amazonaws.com/customers/9396/images/inlab_butt.png" />
                                         <span>In-Lab Resources</span>
@@ -192,7 +301,7 @@ a {
                                     </div>
                                 </a>
 
-                                <a href="https://bookit.dmc.jhu.edu/reserve/InLabComputers">
+                                <a href="https://bookit.dmc.jhu.edu/spaces?lid=16257&gid=0&c=0">
                                     <div class="two-main-butts" style="background-color: #4d6ca9;">
                                         <img src="https://libapps.s3.amazonaws.com/customers/9396/images/inlab_butt.png" />
                                         <span>In-Lab Resources</span>
