--- a/newHomepage/bookitIntro.html
+++ b/newHomepage/bookitIntro.html
@@ -3,10 +3,14 @@
                     
     <div class="contact-buttons">
         <p>
-            BookIt is the interface for checking out equipment from the CMC.
+            <!-- BookIt is the interface for checking out equipment from the CMC.
             We have a wide range of equipment including cameras,
             microphones, and more. You can also check out in-lab resources
-            like computers, software, and other tools for your projects!
+            like computers, software, and other tools for your projects! -->
+            <b>Pardon our dust...</b> <br>
+            This website/booking system (DMC's Bookit) is currently under construction. You should still be able to make bookings and reservations. If you experience any difficulties, please contact us at 410-516-3817.
+            <br>Thank you,<br>
+            DMC Staff
         </p>
     </div>
 </div>
