--- a/newHomepage/firstTime.html
+++ b/newHomepage/firstTime.html
@@ -36,6 +36,22 @@
         font-size: 24px;
     }
 
+    .step-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 10px;
+        margin-top: 10px;
+        margin-bottom: 5px;
+        margin-right: 5px;
+    }
+    
+    .step {
+        display: flex;
+        align-items: top;
+        gap: 7px;
+    }
+
     .step-header {
         display: flex;
         flex-direction: row;
