--- a/newHomepage/bookitIntro.html
+++ b/newHomepage/bookitIntro.html
@@ -1,3 +1,12 @@
+<style>
+    .LEFT {
+        font-family: "Figtree", sans-serif;
+        align-items: left;
+        display: flex;
+        flex-direction: column;
+    }
+</style>
+
 <div class="LEFT">
     <h1>Welcome to BookIt!</h1>
                     
