--- a/newHomepage/contactUs.html
+++ b/newHomepage/contactUs.html
@@ -1,3 +1,5 @@
+<head>
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 <style>
     .contact-buttons {
         display: flex;
@@ -12,6 +14,7 @@
         display: flex;
         align-items: left;
         gap: 10px;
+        padding-right: 15px;
     }
 
     .contact-buttons a {
@@ -25,7 +28,9 @@
         width: 20px;
         height: auto;
     }
+    
     .LEFT {
+        font-family: "Figtree", sans-serif;
         align-items: left;
         display: flex;
         flex-direction: column;
@@ -40,12 +45,12 @@
         }
     }
 </style>
+</head>
 
 <div class="LEFT">
-    <h1>Need help?</h1>
+    <h1>Contact Us</h1>
                     
     <div class="contact-buttons">
-        <p>Check out our <a href="https://bookit.dmc.jhu.edu/passes/faq">FAQ</a> or get in touch with us:</p>
 
         <div class="contact-row">
             <img class="icon-phone" src="https://libapps.s3.amazonaws.com/customers/9396/images/phone.png" />
@@ -53,23 +58,18 @@
         </div>
 
         <div class="contact-row">
-            <img class="icon-phone" src="https://libapps.s3.amazonaws.com/customers/9396/images/phone.png" />
-            <a id="email-button" href="mailto:dmcstaff@jhu.edu"> dmcstaff@jhu.edu </a>
+            <img class="icon-phone" src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/mark_email_unread.png" />
+            <a id="email-button" href="mailto:cmc@jhu.edu"> cmc@jhu.edu </a>
         </div>
 
         <div class="contact-row">
-            <img class="icon-phone" src="https://libapps.s3.amazonaws.com/customers/9396/images/phone.png" />
-            <a id="discord-button" href="https://discord.gg/REWwqgP9mP">Help channel in Discord</a>
+            <img class="icon-phone" src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/Instagram.png" />
+            <a id="insta-button" href="https://www.instagram.com/cmcjhu/">Instagram</a>
         </div>
 
         <div class="contact-row">
-            <img class="icon-phone" src="https://libapps.s3.amazonaws.com/customers/9396/images/phone.png" />
-            <a id="insta-button" href="https://www.instagram.com/dmcjhu/">Instagram</a>
-        </div>
-
-        <div class="contact-row">
-            <img class="icon-phone" src="https://libapps.s3.amazonaws.com/customers/9396/images/phone.png" />
-            <a id="linktree-button" href="https://linktr.ee/dmcjhu">Linktree</a>
+            <img class="icon-phone" src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/linktree.png" />
+            <a id="linktree-button" href="https://linktr.ee/cmcjhu">Linktree</a>
         </div>
     </div>
 </div>
