--- a/newEquipmentpage/softwarePage.html
+++ b/newEquipmentpage/softwarePage.html
@@ -149,6 +149,11 @@
         text-decoration-color: #000;
         color: #000;
     }
+
+    a :hover {
+        text-decoration-line: none;
+        text-decoration-color:#000;
+    }
 </style>
 
 <div class="menu_container">
