--- a/newHomepage/header.html
+++ b/newHomepage/header.html
@@ -1,51 +1,14 @@
-<style>
-    .main-cont {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding-left: 10px;
-        padding-right: 10px;
-        width: 1300px;
-    }
-    .menu-bar {
-        display: flex;
-        direction: row;
-        justify-content: space-between;
-        font-size: 14px;
-        padding: 20px;
-        width: 90%;
-    }
-
-    .menu-bar .links {
-        display: flex;
-        justify-content: row;
-        align-items: center;
-        font-size: larger;
-        gap: 20px;
-    }
-    a {
-        text-decoration: white;
-        text-decoration-line: none;
-    }
-
-    .CENTER {
-        align-items: center;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .black {
-        background-color: black;
-        width: max-content;
-    }
-
-    .whiteText {
-        text-decoration-color: white;
-    }
-
-    @media (max-width: 768px) {
+<head>
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <style>
         .main-cont {
-            width: 768px;
+            font-family: "Figtree", sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding-left: 10px;
+            padding-right: 10px;
+            width: 87%;
         }
         .menu-bar {
             display: flex;
@@ -56,6 +19,11 @@
             width: 90%;
         }
 
+        .menu-bar img {
+            display: block;
+            margin: auto;
+        }
+
         .menu-bar .links {
             display: flex;
             justify-content: row;
@@ -63,71 +31,160 @@
             font-size: larger;
             gap: 20px;
         }
-    }
-    @media (max-width: 465px) {
-        .main-cont {
-            width: 465px;
-        }
-        .menu-bar {
-            display: flex;
-            direction: row;
-            justify-content: space-between;
-            font-size: 12px;
-            padding: 15px;
-            width: 90%;
+        a {
+            text-decoration: white;
+            text-decoration-line: none;
         }
 
-        .menu-bar .links {
-            display: flex;
-            justify-content: row;
+        .CENTER {
             align-items: center;
-            font-size: small;
-            gap: 15px;
-        }
-    }
-    @media (max-width: 350px) {
-        .main-cont {
-            width: 350px;
-        }
-        .menu-bar {
             display: flex;
-            direction: row;
-            justify-content: space-between;
-            font-size: 10px;
-            padding: 10px;
-            width: 90%;
+            flex-direction: column;
         }
 
-        .menu-bar .links {
-            display: flex;
-            justify-content: row;
-            align-items: center;
-            font-size: small;
-            gap: 10px;
-        }
-    }
-    @media (max-width: 275px){
-        .main-cont {
-            width: 275px;
-        }
-        .menu-bar {
-            display: flex;
-            direction: row;
-            justify-content: space-between;
-            font-size: 10px;
-            padding: 5px;
-            width: 90%;
+        .black {
+            background-color: black;
+            width: max-content;
         }
 
-        .menu-bar .links {
-            display: flex;
-            justify-content: row;
-            align-items: center;
-            font-size: x-small;
-            gap: 5px;
+        .whiteText {
+            text-decoration-color: white;
         }
-    }
-</style>
+
+        @media (max-width: 768px) {
+            .main-cont {
+                /* width: 768px; */
+            }
+            .menu-bar {
+                display: flex;
+                direction: row;
+                justify-content: space-between;
+                font-size: 14px;
+                padding: 20px;
+                width: 90%;
+            }
+
+            .menu-bar .links {
+                display: flex;
+                justify-content: row;
+                align-items: center;
+                font-size: larger;
+                gap: 20px;
+            }
+        }
+        @media (max-width: 465px) {
+            .main-cont {
+                /* width: 465px; */
+            }
+            .menu-bar {
+                display: flex;
+                direction: row;
+                justify-content: space-between;
+                font-size: 12px;
+                padding: 15px;
+                width: 90%;
+            }
+
+            .menu-bar .links {
+                display: flex;
+                justify-content: row;
+                align-items: center;
+                font-size: small;
+                gap: 15px;
+            }
+            .links {
+                font-size: 15px;
+            }
+
+            .menu-bar img {
+                width: 75%;
+                height: 50%;
+            }
+        }
+        @media (max-width: 350px) {
+            .main-cont {
+                /* width: 350px; */
+            }
+            .menu-bar {
+                display: flex;
+                direction: row;
+                justify-content: space-between;
+                font-size: 10px;
+                padding: 10px;
+                width: 90%;
+            }
+
+            .menu-bar .links {
+                display: flex;
+                justify-content: row;
+                align-items: center;
+                font-size: small;
+                gap: 10px;
+            }
+
+            .links {
+                font-size: 12px;
+            }
+
+            .menu-bar img {
+                width: 75%;
+                height: 50%;
+            }
+        }
+        @media (max-width: 275px){
+            .main-cont {
+                /* width: 275px; */
+            }
+            .menu-bar {
+                display: flex;
+                direction: row;
+                justify-content: space-between;
+                font-size: 10px;
+                padding: 5px;
+                width: 90%;
+            }
+            .menu-bar img {
+                width: 75%;
+                height: 50%;
+            }
+
+            .menu-bar .links {
+                display: flex;
+                justify-content: row;
+                align-items: center;
+                font-size: x-small;
+                gap: 5px;
+            }
+
+            .links {
+                font-size: 10px;
+            }
+        }
+
+        .links a:hover {
+                background-color: black;
+                color: white;
+                text-decoration-line: none;
+        }
+
+        .links a.active {
+            background-color: black;
+                color: white;
+                text-decoration-line: none;
+        }
+
+        .links a {
+            display: inline-block;
+            color: black;
+            text-align: center;
+            padding: 14px;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+
+
+    </style>
+</head>
 <!-- https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/Group_19.png -->
 <div>
     <div class="CENTER">
@@ -139,17 +196,41 @@
                     </a>
                 </div>
                 <div class="links">
-                    <a class="whiteText" href="https://bookit.dmc.jhu.edu/passes/first-time">
+                    <a id="first" href="https://bookit.dmc.jhu.edu/passes/first-time">
                         <div>First Time?</div>
                     </a>
-                    <a class="whiteText" href="https://bookit.dmc.jhu.edu/passes/faq">
+                    <a id="faq" href="https://bookit.dmc.jhu.edu/passes/faq">
                         <div>FAQ</div>
                     </a>
-                    <a class="whiteText" href="https://bookit.dmc.jhu.edu/calendar?cid=21643">
+                    <a id="calendar" href="https://bookit.dmc.jhu.edu/calendar?cid=21643">
                         <div>Calendar</div>
                     </a>
+                    
                 </div>
             </div>
         </div>
     </div>
 </div>
+<script>
+    var activeTab = function() {
+        let firstBtn = document.getElementById("first")
+        let faqBtn = document.getElementById("faq")
+        let calBtn = document.getElementById("calendar")
+        if (/https:\/\/bookit\.dmc\.jhu\.edu\/passes\/first-time/.test(window.location.href)) {
+            firstBtn.className += " active"
+            faqBtn.className.replace(" active", "")
+            calBtn.className.replace(" active", "")
+        } else if (/https:\/\/bookit\.dmc\.jhu\.edu\/passes\/faq/.test(window.location.href)) {
+            faqBtn.className += " active"
+            firstBtn.className.replace(" active", "")
+            calBtn.className.replace(" active", "")
+        } else if (/https:\/\/bookit\.dmc\.jhu\.edu\/calendar/.test(window.location.href)) {
+            calBtn.className += " active"
+            faqBtn.className.replace(" active", "")
+            firstBtn.className.replace(" active", "")
+        }
+    
+    };
+    // Run the function on DOM load
+    document.addEventListener("DOMContentLoaded", activeTab);
+</script>
