--- a/newHomepage/oldfaqFormat.html
+++ b/newHomepage/oldfaqFormat.html
@@ -1,3 +1,5 @@
+<head>
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 <style>
     /* InfoBars formatting */
     body {
@@ -16,6 +18,7 @@
         color: black;
         text-align: left;
         justify-items: center;
+        font-family: "Figtree", sans-serif;
     }
 
     .infoBars p {
@@ -246,6 +249,8 @@
     }
 
 </style>
+</head>
+
 <div class="infoBars">
     <div class="infoBars-content">
         <h1 id="title-long">Frequently Asked Questions</h1>
